<resources>
    <string name="app_name">Wonders of ometepe</string>

    <string name="helloname">HelloName</string>
    <string name="main_navigation_home">Home</string>
    <string name="main_navigation_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>

    <string name="name">Nombre y Apellido</string>
    <string name="phone_number">Numero de teléfono</string>
    <string name="password">Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="login_in">iniciar sesión</string>
    <string name="add_driver">Agregar conductor</string>
    <string name="schedule">Horario</string>
    <string name="bus_ticket">C$ 10 a C430</string>
    <string name="max_passengers">Max: 44 Personas</string>
    <string name="description">Descripción</string>
    <string name="service">Servicios</string>
    <string name="schedule_time">8am a 7pm</string>
    <string name="driver">Conductor</string>
    <string name="license">Licencia</string>
    <string name="login">Iniciar sesión</string>
    <string name="car_license">RI 010101</string>
    <string name="price">Precio</string>
    <string name="route">Ruta</string>
    <string name="select_category">Selecciona la categoría</string>
    <string name="transport">Transporte</string>
    <string name="local">Local</string>
    <string name="hotel">Hotel</string>
    <string name="restaurant">Restaurente</string>
    <string name="bar">Bar</string>
    <string name="park">Parqué</string>
    <string name="beach">Playa</string>
    <string name="adress">Dirección</string>
    <string name="schudules">Horario</string>
    <string name="email">Correo</string>
    <string name="home">Inicio</string>
    <string name="profile">Perfil</string>

    <string name="restaurante">Restaurante</string>
    <string name="bares">Bares</string>
    <string name="playas">Playas</string>
    <string name="local">Local</string>
    <string name="hoteles">Hoteles</string>
    <string name="start_with_local">Comenzar con Locales</string>
    <string name="start_with_transport">Comenzar con Transporte</string>
    <string name="motorcycle_taxi">Moto taxi</string>
</resources>