<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_grey"
    tools:context=".InfoLocalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="14dp">

            <androidx.cardview.widget.CardView
                style="@style/CardViewItem"
                android:layout_width="match_parent"
                android:layout_height="220dp">

                <ImageView
                    android:id="@+id/activityInfoLugares_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ojo_de_agua" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                style="@style/CardViewListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/activityInfoLugares_phoneNumber"
                    style="@style/Text_Sm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:text="@string/phone_number"
                    app:drawableLeftCompat="@drawable/icon_contact_phone" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_location_on" />

                    <TextView
                        android:id="@+id/activityInfoLugares_address"
                        style="@style/Text_Sm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/adress" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_calendar_today" />

                    <TextView
                        android:id="@+id/activityInfoLugares_schedule"
                        style="@style/Text_Sm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/activityInfoLugares_cardCalendar"
                style="@style/CardViewListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CalendarView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardViewListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/activityInfoLugares_email"
                    style="@style/Text_Sm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_email"
                    android:drawablePadding="8dp"
                    android:text="@string/email" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/infoBusBarco_titleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/description"
                style="@style/Text_Md" />

            <TextView
                android:id="@+id/activityInfoLugares_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_gravity="center_horizontal"
                android:text="TextView"
                style="@style/Text_Sm" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>